# mv-data-ingestion

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sample.env
extractors/: coindesk.py  cointelegraph.py  cryptopanic.py  newsdataio.py  reddit.py  yfinance.py
gcloud/: bq.py  schemas.py  tableconfig.py
utils/: file_utils.py
